test/should-pass/base2-ascii-number/exe.dk
// -*- mode: Dakota; c-basic-offset: 2; tab-width: 2; indent-tabs-mode: nil -*-

int-t main()
{
  object-t base2-ascii-number-klass = make(ascii-number-klass::klass);
  dk::dump(base2-ascii-number-klass);
  object-t base2-ascii-number = make(base2-ascii-number-klass, number : 42);
  USE(base2-ascii-number);
  return 0;
}
