test/should-fail/no-such-keyword-klass/exe-main.dk
// -*- mode: Dakota; c-basic-offset: 2; tab-width: 2; indent-tabs-mode: nil -*-

int-t main()
{
  object-t o = dk::alloc(klass::klass);
  dk::init(o, bogus : 42);
  USE(o);
  //  make(klass::klass, bogus : 42);
  return 0;
}
